auto-test/tests/chapter_18/invalid_parse/struct_member_initializer.c
struct a {
    
    int member = 1;
};